--- a/backend/views/layout.hbs
+++ b/backend/views/layout.hbs
@@ -37,13 +37,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/about">About</a>
+            <a class="nav-link js-scroll-trigger" href="/borrowed-books">My Borrowed</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/books">Available Books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="/my-books">My Books</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/login">Login</a>
@@ -59,11 +59,11 @@
   {{{body}}}
 
   <!-- Footer -->
-  <footer class="bg-light py-5">
+  <!--<footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2020 - MEAN Stack Agency</div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="/bootstrap/vendor/jquery/jquery.min.js"></script>
