--- a/backend/views/login.hbs
+++ b/backend/views/login.hbs
@@ -8,18 +8,18 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <form>
+      <form action="/auth" method="post">
         <div class="form-group">
-          <label for="inputEmail1">Email address</label>
-          <input type="email" class="form-control" name="email" id="inputEmail1" aria-describedby="emailHelp" required>
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <label for="inputUsername1">Username</label>
+          <input type="text" class="form-control" name="username" id="inputUsername1" aria-describedby="usernameHelp" required>
+          <!--<small id="usernameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
         </div>
         <div class="form-group">
           <label for="inputPassword1">Password</label>
           <input type="password" class="form-control" name="password" id="inputPassword1" required>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+        <button type="submit" class="btn btn-primary btn-block" href="/auth">Submit</button>
         <hr class="divider my-4">
         <div class="text-center">
           <a class="small" href="/forgot-password">Forgot Password?</a>
