--- a/backend/views/register.hbs
+++ b/backend/views/register.hbs
@@ -16,7 +16,7 @@
               <form class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-2">
-                    <input type="text" class="form-control form-control-user" name="firstname" id="inputFirstName" placeholder="First Name" required>
+                    <input type="text" class="form-control form-control-user" name="username" id="inputUsername" placeholder="username" required>
                   </div>
                   <div class="col-sm-6">
                     <input type="text" class="form-control form-control-user" name="lastname" id="inputLastName" placeholder="Last Name" required>
