--- a/backend/views/index.hbs
+++ b/backend/views/index.hbs
@@ -7,10 +7,13 @@
         <hr class="divider my-4">
       </div>
       <div class="col-lg-8 align-self-baseline">
-        <p class="text-white-75 font-weight-light mb-5">This is mainly about how to solve technical problems that arise from using front or back end technologies to
-          make web pages or web apps but some of these steps will be applicable to solving technical problems in
-          general.</p>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="/about">Find Out More</a>
+        <p class="text-white-75 font-weight-light mb-5">Сайт створено для позичання книжок у інших користувачів, а також для того, аби
+          ділитися своїми книгами. Лише кілька правил:
+          1. При позиченні книжки Ви мусите заплатити аванс як гарантію повернення. Вартість становить 0.5*кількість сторінок у книзі.
+          2. Після повернення книги, власник повертає кошти, якщо немає якихось значних додаткових пошкоджень.
+          3. Якщо потрібна доставка, її оплачує той, хто замовляє. 
+        </p>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="/books">Get new book</a>
       </div>
     </div>
   </div>
