--- a/backend/views/books/books-add-form.hbs
+++ b/backend/views/books/books-add-form.hbs
@@ -11,7 +11,7 @@
       <!-- Nested Row within Card Body -->
       <div class="row o-hidden border-0">
         <div class="col-lg-12">
-          <form class="user">
+          <form action="/books/add-book/" method="post" class="user">
             <div class="form-group row">
               <div class="col-sm-6 mb-3 mb-sm-0">
                 <label for="inputISBN">ISBN</label>
@@ -55,7 +55,7 @@
   </div>
 </section>
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
+ /* document.addEventListener('DOMContentLoaded', function () {
     const addBookForm = document.querySelector('#add-book-form form');
 
     addBookForm.addEventListener('submit', function (event) {
@@ -81,5 +81,5 @@
           // Обробка помилки тут
         });
     });
-  });
+  });*/
 </script>
