--- a/backend/views/layout.hbs
+++ b/backend/views/layout.hbs
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-scrolled" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="/">MEAN Stack Agency</a>
+      <a class="navbar-brand" href="/">Booklover Heaven</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -46,10 +46,13 @@
             <a class="nav-link js-scroll-trigger" href="/my-books">My Books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/login">Login</a>
+            <a class="nav-link js-scroll-trigger" href="/login">Log in</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/logout">Log out</a>
           </li>
         </ul>
       </div>
