--- a/backend/views/register.hbs
+++ b/backend/views/register.hbs
@@ -13,17 +13,22 @@
         <div class="row o-hidden border-0">
           <div class="col-lg-12">
             <div class="p-5">
-              <form class="user">
+              <form action="/register" method="post" class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-2">
-                    <input type="text" class="form-control form-control-user" name="username" id="inputUsername" placeholder="username" required>
+                    <input type="text" class="form-control form-control-user" name="username" id="inputUsername" placeholder="Username" required>
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" class="form-control form-control-user" name="lastname" id="inputLastName" placeholder="Last Name" required>
+                    <input type="text" class="form-control form-control-user" name="name" id="inputName" placeholder="Name you want to be called by" required>
                   </div>
                 </div>
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-user" name="email" id="inputEmail" placeholder="Email Address" required>
+                <div class="form-group row">
+                  <div class="col-sm-6">
+                    <input type="number" class="form-control form-control-user" name="age" id="inputAge" placeholder="Age" required>
+                  </div>
+                  <div class="col-sm-6">
+                    <input type="email" class="form-control form-control-user" name="email" id="inputEmail" placeholder="Email Address" required>
+                  </div>
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-2">
@@ -33,14 +38,22 @@
                     <input type="password" class="form-control form-control-user" name="repeatPassword" id="inputRepeatPassword" placeholder="Repeat Password" required>
                   </div>
                 </div>
+                <div class="form-group row">
+                  <div class="col-sm-6 mb-3 mb-sm-2">
+                    <input type="text" class="form-control form-control-user" name="phone" id="inputPhone" placeholder="Phone number (without +)" required>
+                  </div>
+                  <div class="col-sm-6">
+                    <input type="text" class="form-control form-control-user" name="tgName" id="inputTelegram" placeholder="Telegram name (if you have one)" required>
+                  </div>
+                </div>
                 <button class="btn btn-primary btn-block" type="submit">Register Account</button>
                 <hr>
-                <a href="#" class="btn btn-google btn-user btn-block">
+                {{!-- <a href="#" class="btn btn-google btn-user btn-block">
                   <i class="fab fa-google fa-fw"></i> Register with Google
                 </a>
                 <a href="#" class="btn btn-facebook btn-user btn-block">
                   <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                </a>
+                </a> --}}
               </form>
              <hr class="divider my-4">
               
