--- a/backend/views/login.hbs
+++ b/backend/views/login.hbs
@@ -12,14 +12,13 @@
         <div class="form-group">
           <label for="inputUsername1">Username</label>
           <input type="text" class="form-control" name="username" id="inputUsername1" required>
-          <!--<small id="usernameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
         </div>
         <div class="form-group">
           <label for="inputPassword1">Password</label>
           <input type="password" class="form-control" name="password" id="inputPassword1" required>
         </div>
 
-        <button id="submit" onclick="submitForm()" class="btn btn-primary btn-block" href="/auth">Submit</button>
+        <button id="submit" class="btn btn-primary btn-block" href="/auth">Submit</button>
         <hr class="divider my-4">
         <div class="text-center">
           <a class="small" href="/register">Don't have an account? Register!</a>
@@ -27,11 +26,4 @@
       </form>
     </div>
   </div>
-<script>
-  var button = document.getElementById('submit');
-  function submitForm(){
-    console.log('hello')
-  }
-</script>
-
 </section>
